Generate DataRequest id on consumer side and forward it into ArtifactRequestMessage + some minor fixes